--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,13 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
+    # Health check endpoint for Cloud Run
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
+
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
@@ -28,5 +35,3 @@ server {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 }
-
-
