--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # ✅ FIXED: Use 127.0.0.1 to match backend
 VITE_API_URL=http://127.0.0.1:8000/api/v1
 
-#VITE_API_URL=https://lead-gen-ai-backend-595294038624.asia-south2.run.app
+VITE_API_URL=https://curk-backend-553437330288.asia-southeast1.run.app/
