--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # ✅ FIXED: Use 127.0.0.1 to match backend
 # VITE_API_URL=http://127.0.0.1:8000/api/v1
 
-VITE_API_URL=https://api.curk.in/api/v1/auth/login
+VITE_API_URL=https://api.curk.in/api/v1
+
 
